<resources>
    <string name="app_name">WindowController</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="fragment_title_window_blinds_list">Controllers</string>
    <string name="fragment_title_window_blinds_control">Remote</string>
    <string name="fragment_title_window_blinds_new">Add new</string>
    <string name="fragment_title_window_blinds_edit">Edit</string>
    <string name="fragment_title_window_blinds_list_empty">No controllers added</string>

    <string name="fragment_new_window_blind_address">IP address</string>
    <string name="fragment_new_window_blind_api_version">API version</string>
    <string name="fragment_new_window_blind_name">Name</string>
    <string name="fragment_new_window_blind_create">Create</string>
    <string name="fragment_new_window_blind_cant_create">Please fill all fields</string>
    <string name="window_row_item_connected">Connected</string>
    <string name="window_row_item_not_connected">Not connected</string>
    <string name="menu_action_edit">Edit</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_settings">Settings</string>

    <string name="fragment_edit_button">Edit</string>

    <string name="fragment_control_connected">Connected</string>
    <string name="fragment_control_not_connected">Not connected</string>

    <string-array name="api_versions">
        <item>v1 OrangePi</item>
        <item>v2 NodeMCU</item>
    </string-array>
</resources>
