<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
            android:id="@+id/action_edit"
            android:title="@string/menu_action_edit"
            android:orderInCategory="1"
            android:icon="@android:drawable/ic_menu_edit"
            app:showAsAction="always"/>

    <item
            android:id="@+id/action_settings"
            android:title="@string/menu_action_settings"
            android:orderInCategory="2"
            android:icon="@android:drawable/ic_menu_preferences"
            app:showAsAction="always"/>

    <item
            android:id="@+id/action_delete"
            android:title="@string/menu_action_delete"
            android:orderInCategory="100"
            android:icon="@android:drawable/ic_menu_delete"
            app:showAsAction="never"/>

</menu>