<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical"
                                                   android:padding="20dp"
                                                   tools:context=".ui.NewWindowBlindFragment">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_new_window_blind_address" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/title_address" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <EditText
            app:layout_constraintTop_toBottomOf="@id/title_address"
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
            app:layout_constraintTop_toBottomOf="@id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_new_window_blind_api_version" android:id="@+id/title_api_version"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <Spinner
            app:layout_constraintTop_toBottomOf="@id/title_api_version"
            android:id="@+id/spinner_api_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/title_name"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/title_name"
            app:layout_constraintTop_toBottomOf="@id/spinner_api_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_new_window_blind_name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <EditText
            app:layout_constraintTop_toBottomOf="@id/title_name"
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <Button
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/new_window_blind_create"
            android:text="@string/fragment_new_window_blind_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>